# dynamic-summary

./: .coverage.tMac.18677.XbjbmxZx  .cursorrules  .dmypy.json  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .jscpd.json  .mcp.json  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PR_DESCRIPTION.md  README.md  TEST_AUDIT_SUMMARY.md  answer_sheet_rated.json  build_log.txt  debug_profile.stats  docker-compose.yml  evaluate_claude_ratings.py  find_duplicated_code.py  index.html  jscpd_bug_analysis.md  package-lock.json  package.json  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  run_full_evaluation.sh  setup.py  telemetry.json  telemetry_the_hobbit_chapter_1_200.json  test-pr-detection.md  test-pr-workflow-1.txt  (+4 more)
.claude/: hooks.json  project_settings.json  run-tests.sh  settings.json
.railway/: config.json
.ralph/: AGENTS.md  IMPLEMENTATION_PLAN.md  ISSUES_DISCOVERED.md  config.yaml
agent_logs/: cursor_agent_1.md  cursor_agent_3.md
benchmarks/: README.md  run_indexing_benchmark.py
benchmarks-400/: comparison.md  log.txt
benchmarks-400-clean/: comparison.md  log.txt
docs/: BENCHMARKS.md  README.md  agent-handoff.md  api-reference.md  architecture.md  bug-investigations.md  core-algorithm-design.md  developer-guide.md  dp-transition-analysis.md  future-ideas.md  github-actions-cost-optimization.md  legacy-assembly-test-analysis.md  llm_abstraction.md  long-term-agent-memory-vision.md  memory-usage.md  naming-ideas.md  production-learnings.md  prompt-customization.md  railway-operations.md  repo-review.md  subagent-management.md  telemetry.md  temporal-documents.md  test-coverage-report.md  test-hooks-summary.md  test-strategy.md  testing-strategy.md  tiling-algorithm.md  token-position-resolver-integration.md  tree-viz-coordinate-systems.md  vision.md
integrations/: CLAUDE.md
integrations/claude-code/: CLAUDE.md  pyproject.toml
integrations/claude-code/iterm2/: iterm2-status-writer.sh  ragzoom_status.py
integrations/claude-code/plugin/: .mcp.json  README.md
integrations/claude-code/plugin/.claude-plugin/: plugin.json
integrations/claude-code/plugin/hooks/: hooks.json
integrations/claude-code/plugin/scripts/: iterm2-status.sh  session-start.sh  sync-transcript.sh
integrations/claude-code/plugin/skills/memory-tool-usage/: SKILL.md
integrations/claude-code/scripts/: deploy-plugin.sh
integrations/claude-code/src/ragzoom_claude_code/: __init__.py  cli.py  jsonl_reader.py  mcp_server.py  recall.py  transcript_sync.py
integrations/claude-code/tests/: conftest.py  test_claude_transcriber_dependency.py  test_cli.py  test_execute_sync_batch_append.py  test_filter_to_steps.py  test_group_into_turns.py  test_hook_cycle_detection.py  test_jsonl_reader.py  test_mcp_server.py  test_mcp_server_script.py  test_metadata_sync.py  test_pid_temp_file.py  test_protocol_conformance.py  test_revert_step_granularity.py  test_revert_turn_granularity.py  test_stateless_sync.py  test_stateless_sync_integration.py  test_step_dataclass.py  test_step_to_append_unit.py  test_synced_document_temporal_sqlite.py  test_transcript_formatting.py  test_transcript_summarization_guidance.py  test_transcript_sync.py  test_transcript_temporal_queries_sqlite.py  test_turn_dataclass.py  test_turn_level_tracking.py  test_turn_to_append_unit.py  test_unified_identity.py  test_uses_claude_transcriber.py
integrations/clawdbot/: CLAUDE.md  pyproject.toml
integrations/clawdbot/src/ragzoom_clawdbot/: __init__.py  cli.py  transcript_sync.py
integrations/openclaw/: CLAUDE.md  SKILL.md  pyproject.toml
integrations/openclaw/scripts/: setup.py
integrations/openclaw/src/ragzoom_openclaw/: __init__.py  cli.py  mcp_server.py  transcript_sync.py
memory_service/: __init__.py  admin.py  grpc_servicer.py  storage.py
prompt-experiments/: .gitignore  FINDINGS.md  README.md  active_strategies.py  analyze_by_chunk_size.py  analyze_percentage_bug.py  analyze_results.py  debug_percentage.py  generate_test_corpus.py  run_experiments.py  test_single_strategy.py
proto/: dynamic_summary.proto
ragzoom/: __init__.py  _dummy_speed_check.py  api.py  api_middleware.py  append_patch.py  assemble.py  bm25.py  chroma_compat.py  claude_transcript.py  cli.py  config.py  constants.py  cost.py  daemon.py  db_utils.py  default_config.json  docker_postgres.py  document_store.py  dynamic_frontier.py  dynamic_tiling.py  error_handling.py  error_utils.py  exceptions.py  greedy_tiling.py  index.py  interfaces.py  mcp_server.py  metrics.py  migrations.py  model_info.py  models.json  models.py  output_formatters.py  pricing.json  progress.py  progress_display.py  prompt.py  query_log.py  retrieve.py  runtime_metadata.py  (+24 more)
ragzoom-telemetry/: README.md  pyproject.toml  requirements.txt  setup.py
ragzoom-telemetry/ragzoom_telemetry/: __init__.py  __main__.py  analyze.py  cli.py  compare.py  visualize.py
ralph/: IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  loop.sh  stream-progress.sh
requirements/: app.in  dev.in
scripts/: README.md  analyze-outlier-nodes.py  benchmark_tokenization.py  check-workflow-installs.sh  claude-python-hook.sh  compare_benchmarks.py  compare_single_benchmark.py  compile-proto.sh  create-worktree  devstack  devstack.sh  extract_problem_cases.py  find-impacted-tests.py  fix_index_config.py  generate-merge-message.sh  get-grpc-address  incrementally_index.py  install-dev-dependencies.sh  memory-admin  migrate-existing-baselines  profile_indexing.py  prune_summary_roots.py  python-checks-common.sh  recreate_hobbit_chunks.py  remove-slow-markers.py  repair_corrupt_nodes.py  rewrite-commit-history.sh  run-checks.sh  run-indexing-benchmarks  run-locomo  run-longmemeval  run-longmemeval-baseline  run-oolong  run-oolong-baseline  run-realistic-benchmark  run_tests_with_timeouts.py  setup-dev.sh  squash-merge.sh  start-mcp-server  sync-baselines  (+7 more)
specs/: bm25-hybrid-search.md  client-managed-chunking.md  custom-prompt-config.md  daemon-lifecycle.md  embedding-text-optimization.md  (+11 more)
(+647 files in other folders)
