[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragzoom"
version = "0.1.0"
description = "Incremental, hierarchical RAG memory system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RagZoom Team"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.3.0",
    "langchain>=0.0.340",
    "langchain-community>=0.0.1",
    "tiktoken>=0.5.1",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "pgvector>=0.2.3",
    "psycopg[binary]>=3.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
telemetry = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.4.0",
    "numpy>=1.24.0",
]
dev = [
    "types-tqdm",
    "pandas-stubs",
    "types-psutil",
    "types-seaborn",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.scripts]
ragzoom = "ragzoom.cli:cli"
ragzoom-telemetry = "ragzoom.telemetry_cli:cli"

[tool.setuptools.packages.find]
include = ["ragzoom*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
# disallow_any_expr = true  # Not enabled - would require extensive workarounds for Pydantic/external libraries

# External library type issues
[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "seaborn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

# Modules that use matplotlib/visualization libraries need to ignore unimported Any
[[tool.mypy.overrides]]
module = [
    "ragzoom.telemetry_viz",
    "ragzoom.telemetry_cli",
    "tests.test_telemetry_viz"
]
ignore_missing_imports = true
disallow_any_unimported = false


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "skip_ci: marks tests as skipped in CI (e.g., visualization tests)",
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring real services",
    "benchmark: marks performance benchmark tests",
]
# In CI, run: pytest -m "not skip_ci"