[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragzoom"
version = "0.1.0"
description = "Incremental, hierarchical RAG memory system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RagZoom Team"},
]
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "openai==1.102.0",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "tiktoken==0.11.0",
    "sqlalchemy==2.0.43",
    "numpy==2.3.2",
    "click==8.2.1",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    "psutil==7.0.0",
    "pgvector==0.4.1",
    "psycopg[binary]==3.2.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
telemetry = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.4.0",
    "numpy>=1.24.0",
]
dev = [
    "types-tqdm",
    "pandas-stubs",
    "types-psutil",
    "types-seaborn",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.scripts]
ragzoom = "ragzoom.cli:cli"
ragzoom-telemetry = "ragzoom.telemetry_cli:cli"

[tool.setuptools.packages.find]
include = ["ragzoom*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
# disallow_any_expr = true  # Not enabled - would require extensive workarounds for Pydantic/external libraries

# External library type issues
[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tomllib"
ignore_missing_imports = true

# matplotlib doesn't have complete type stubs
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "skip_ci: marks tests as skipped in CI (e.g., visualization tests)",
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring real services",
    "benchmark: marks performance benchmark tests",
]
# In CI, run: pytest -m "not skip_ci"