[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragzoom-telemetry"
version = "0.1.0"
description = "Developer tools for analyzing RagZoom telemetry data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RagZoom Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["ragzoom_telemetry*"]