[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragzoom-telemetry"
version = "0.1.0"
description = "Developer tools for analyzing RagZoom telemetry data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RagZoom Team"},
]
dependencies = [
    "click>=8.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.4.0",
    "numpy>=1.24.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools.packages.find]
include = ["ragzoom_telemetry*"]