[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragzoom-clawdbot"
version = "0.1.0"
description = "Clawdbot integration for RagZoom memory"
requires-python = ">=3.10"
dependencies = [
    "ragzoom>=0.1.0",
    "claude-transcriber>=0.3.1",
    "click>=8.0.0",
]

[project.scripts]
ragzoom-clawdbot = "ragzoom_clawdbot.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
