[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragzoom-openclaw"
version = "0.1.0"
description = "OpenClaw integration for RagZoom memory"
requires-python = ">=3.10"
dependencies = [
    "ragzoom>=0.1.0",
    "click>=8.0.0",
]

[project.scripts]
ragzoom-openclaw = "ragzoom_openclaw.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
